now I add fav icon and edit title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HomePage</title>
+    <link rel="icon" href="home.png" type="image/x-icon">
 </head>
 <body>
     <h2>InshaAllah, problem will be vanished forever</h2>
